--- a/css/Estilos.css
+++ b/css/Estilos.css
@@ -1,4 +1,89 @@
-body{background-color: #FEF9E7 }
+body{background-color: #FEF9E7;
+background-image: url(../Imagenes/wall.jpg);}
 h1{color:#DC7633}
 .C2{color: #145A32}
 .C3{color:#D35400 }
+header{background-color:#FADBD8 ;margin:20px 20px 20px 20px}
+nav{background-color:#F5B7B1;margin: 2px 2px 2px 2px;}
+.Prov a img {width: 75px;
+height: 75px}
+.mapa{ width="200" height="200" }
+section{background-color:#F5B7B1;width: 55%;
+ float: left;
+ margin: 1%;
+ padding: 10px;
+ border: 5px solid pink;
+ box-sizing: border-box;
+ height: 600px;
+ overflow: auto;}
+aside{background-color:#F5B7B1;
+width: 40%;
+float: right;
+margin:1%;
+border:5px solid pink;
+box-sizing: border-box;
+height: 600px;
+overflow: auto;}
+
+footer{background-color:#F5B7B1;
+display: flex;
+justify-content:space-evenly;}
+
+
+.R{color:#DC7633; display: flex;justify-content:space-evenly
+}
+
+
+.Whatsapp-icono{
+  position:fixed;
+  bottom: 20px;
+  right: 20px;
+  z-index: 9999;
+}
+.Whatsapp-icono a img {
+  width: 100px;
+  height: 100px;
+  border-radius: 150px;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
+
+}
+
+.facebook-icono a img {
+  width: 100px;
+  height: 100px;
+  border-radius: 150px;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
+
+}
+.facebook-icono{
+  bottom: 20px;
+  right: 20px;
+  z-index: 1999;
+}
+.instagram a img {
+  width: 100px;
+  height: 100px;
+  border-radius: 150px;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
+
+}
+.instagram{
+  bottom: 20px;
+  right: 20px;
+  z-index: 1999;
+}
+.link a img {
+  width: 100px;
+  height: 100px;
+  border-radius: 150px;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
+
+}
+.link{
+  bottom: 20px;
+  right: 20px;
+  z-index:1999;
+}
+.flex-container{
+  display: flex; justify-content:space-evenly
+}
