--- a/css/Estilos.css
+++ b/css/Estilos.css
@@ -1,15 +1,36 @@
+ @font-face {
+  font-family: "F1";
+  src: url( " ../FUENTES/f1.ttf")
+  format("truetype");
+  }
+@font-face {
+   font-family: "r";
+   src: url( " ../FUENTES/r.ttf")
+   format("truetype");
+   }
+
+ @font-face {
+    font-family: "texto";
+    src: url( " ../FUENTES/texto.ttf")
+    format("truetype");
+      }
 body{background-color: #FEF9E7;
 background-image: url(../Imagenes/wall.jpg);}
-h1{color:#DC7633}
-.C2{color: #145A32}
+.T{font-family:"r";
+display: flex; justify-content: center;}
+.T2{font-family: "r"}
+h1{color:#DC7633;}
+.C2{color: #145A32;
+font-family:"F1"}
 .C3{color:#D35400 }
 header{background-color:#FADBD8 ;margin:20px 20px 20px 20px
 }
 .ban{ display: flex;
-  justify-content: flex-start;}
-.Titulo{display: flex;
-  justify-content: center;
-    flex-wrap: wrap;}
+  justify-content:space-around;
+  width: 20%;
+  border-top: 2px solid red ;
+  border-bottom: 3px double #369;}
+
 .redes a img {
     width: 100px;
     height: 100px;
@@ -19,15 +40,26 @@ header{background-color:#FADBD8 ;margin:20px 20px 20px 20px
   }
   .redes{
     display: flex;
-    justify-content: flex-end;
+    justify-content:flex-end;
+    right: 20%;
     bottom: 20px;
     right: 20px;
     z-index: 1999;
 }
 nav{background-color:#F5B7B1;margin: 2px 2px 2px 2px;}
+nav:hover{
+  background-color: #F1948A ;
+}
+a:active {color:red }
+a:hover{background-color: #FADBD8 ;
+font-size: 20px;
+  border-radius: 350px;
+}
+.Ms{font-family:"F1"}
 .Prov a img {width: 75px;
 height: 75px}
 .mapa{ width="200" height="200" }
+.in{font-family: "texto"}
 section{background-color:#F5B7B1;width: 55%;
  float: left;
  margin: 1%;
@@ -113,3 +145,5 @@ footer{background-color:#F5B7B1;
 .flex-container{
   display: flex; justify-content:center;
 }
+.informacion{font-family:"texto"
+   }}
